fix overflow and padding of popup

--- a/Application/style/main.css
+++ b/Application/style/main.css
@@ -230,4 +230,7 @@ margin-left: 20px;
 
 .leaflet-popup-content {
   min-width: 280px !important;
+  overflow: scroll;
+  max-height: 130px;
+  padding-bottom: 10px !important;
 }
